// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly 1`] = `
<span
  class="shoppingItemText"
>
  0
</span>
`;

exports[`Modal component should render correctly 1`] = `
<div>
  <div
    class="modal hide"
    data-testid="modal"
  />
</div>
`;

exports[`NavBar component should render correctly 1`] = `
<div>
  <ul
    id="navBar"
  >
    <li>
      <a
        href="/"
      >
        <img
          id="logo-image"
          src="../icons/logo2.png"
        />
        <span
          id="logo-text"
        >
          Brew Day!
        </span>
      </a>
    </li>
    <li>
      <a
        href="/ricette"
      >
        Ricette
      </a>
    </li>
    <li>
      <a
        href="/birre"
      >
        Birre
      </a>
    </li>
    <li>
      <a
        href="/inventario"
      >
        Inventario
      </a>
    </li>
    <li>
      <a
        href="/spesa"
      >
        Spesa
      </a>
    </li>
  </ul>
</div>
`;

exports[`QuantityInput component should render correctly 1`] = `
<div>
  <input
    data-testid="quantity-input"
    id="shoppingItemId"
    name="shoppingItemId"
    value=""
  />
</div>
`;

exports[`RecipeDelete component should render correctly 1`] = `
<div>
  <div>
    <h1>
      name
    </h1>
    <p>
      description
    </p>
    <table
      class="recipeView"
    >
      <thead>
        <tr>
          <th>
            Nome
          </th>
          <th>
            Quantità
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            name
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="recipeButton"
  >
    Sei sicuro di voler rimuovere la ricetta?
  </button>
</div>
`;

exports[`RecipeEdit component should render correctly 1`] = `
<div>
  <div>
    <div
      id="recipeEditDiv"
    >
      <p>
        Nome:
      </p>
      <textarea
        id="nameTextArea"
      >
        name
      </textarea>
      <p>
        Descrizione:
      </p>
      <textarea
        id="descriptionTextArea"
      >
        description
      </textarea>
      <br />
      <table
        class="recipeView"
      >
        <thead>
          <tr>
            <th>
              Ingrediente
            </th>
            <th>
              Quantità
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <p>
                Acqua
              </p>
            </td>
            <td>
              <textarea />
            </td>
          </tr>
          <tr>
            <td>
              <p>
                Additivi
              </p>
            </td>
            <td>
              <textarea />
            </td>
          </tr>
          <tr>
            <td>
              <p>
                Lievito
              </p>
            </td>
            <td>
              <textarea />
            </td>
          </tr>
          <tr>
            <td>
              <p>
                Luppoli
              </p>
            </td>
            <td>
              <textarea />
            </td>
          </tr>
          <tr>
            <td>
              <p>
                Malto
              </p>
            </td>
            <td>
              <textarea />
            </td>
          </tr>
          <tr>
            <td>
              <p>
                Zuccheri
              </p>
            </td>
            <td>
              <textarea />
            </td>
          </tr>
        </tbody>
      </table>
      <button>
        Modifica ricetta
      </button>
    </div>
  </div>
</div>
`;

exports[`RecipeView component should render correctly 1`] = `
<div>
  <h1>
    name
  </h1>
  <p>
    description
  </p>
  <table
    class="recipeView"
  >
    <thead>
      <tr>
        <th>
          Nome
        </th>
        <th>
          Quantità
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          name
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
